[package]
name = "wordlist-generator"
version = "0.1.0"
authors = ["ritiek <ritiekmalhotra123@gmail.com>"]
description = "A handy wordlist generator"
repository = "https://github.com/ritiek/wordlist-generator"
readme = "README.md"
keywords = ["wordlist-generator"]
categories = ["command-line-utilities", "data-structures"]
license = "MIT"

[dependencies]
itertools = "0.6"
permutohedron = "0.2"
clap = "2.24"

[[bin]]
name = "wordlist"
